--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -6,16 +6,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="hr.fer.tel.ruazosa.isindija.medvednicahikingbuddy.Statistics">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/avgDistance"
+        android:id="@+id/avgDis"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="57dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="165dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="95dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/avgSpeed"
+        android:id="@+id/avgSpeed"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
